--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contenedor">
         <header>
             <div class="logo">
-                <img src="./img/logo.jpg" width="100" height="100" alt="img1">
+                <img src="logo.jpg" width="100" height="100" alt="img1">
                 <a href="#" style="font-size:30px;">TOYOTA</a>
             </div>
             <nav>
@@ -50,12 +50,12 @@
         <aside>
             <div class="widget">
                 <div class="imagen">
-                    <img src="./img/prado1.jpg" width="230" height="90" alt="imagen1">
+                    <img src="prado1.jpg" width="230" height="90" alt="imagen1">
                 </div>
             </div>
             <div class="widget">
                 <div class="imagen">
-                    <img src="./img/prado2.jpg" width="240" height="90" alt="imagen2">
+                    <img src="prado2.jpg" width="240" height="90" alt="imagen2">
                 </div>
             </div>
         </aside>
